Bug 238197 - KWrite crashes on Start
Summary: KWrite crashes on Start
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: kwrite (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-19 17:40 UTC by Dave Gordon
Modified: 2010-05-20 20:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dave Gordon 2010-05-19 17:40:08 UTC
Application: kwrite (4.4.2 (KDE 4.4.2))
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.33.3-85.fc13.x86_64 x86_64
Distribution (Platform): Fedora RPMs

-- Information about the crash:
When opening a text document through Dolphin, KDE reports no associated application can be found and then KWrite displays a crash dialog. It happens every time.

The crash can be reproduced every time.

 -- Backtrace:
Application: KWrite (kwrite), signal: Segmentation fault
82	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[KCrash Handler]
#5  KTextEditor::Editor::setSimpleMode (this=0x0, on=true) at /usr/src/debug/kdelibs-4.4.2/interfaces/ktexteditor/ktexteditor.cpp:97
#6  0x00000034d2e0f99c in KWrite::KWrite (this=0x22af9b0, doc=0x0, __in_chrg=<value optimized out>, __vtt_parm=<value optimized out>) at /usr/src/debug/kdebase-4.4.2/apps/kwrite/kwritemain.cpp:78
#7  0x00000034d2e111ca in KWriteApp::init (this=0x7fff2b496380) at /usr/src/debug/kdebase-4.4.2/apps/kwrite/kwriteapp.cpp:117
#8  0x00000034d2e11b15 in KWriteApp::KWriteApp (this=0x7fff2b496380, m_args=0x0) at /usr/src/debug/kdebase-4.4.2/apps/kwrite/kwriteapp.cpp:39
#9  0x00000034d2e0d378 in kdemain (argc=<value optimized out>, argv=<value optimized out>) at /usr/src/debug/kdebase-4.4.2/apps/kwrite/kwritemain.cpp:689
#10 0x00000034c861ec5d in __libc_start_main (main=0x4007f0 <main(int, char**)>, argc=2, ubp_av=0x7fff2b496e48, init=<value optimized out>, fini=<value optimized out>, 
    rtld_fini=<value optimized out>, stack_end=0x7fff2b496e38) at libc-start.c:226
#11 0x0000000000400729 in _start ()

Reported using DrKonqi
Comment 1 Milian Wolff 2010-05-19 20:24:56 UTC
The lines completely differ from KWrite from trunk, even though nobody worked on that in a long time. Meaning: somehow your system is severely screwed up. If you compiled from sources, rebuild (clean all other stuff first). If you installed a packaged, complain to your distribution.
Comment 2 Christoph Cullmann 2010-05-20 20:36:26 UTC
SVN commit 1128938 by cullmann:

dhaumann:

    fix crash due to kapp->exit(1) no exiting immediately

BUG: 238197


 M  +2 -1      kwritemain.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1128938