dhaumann:

fix crash due to kapp->exit(1) no exiting immediately

BUG: 238197

svn path=/trunk/KDE/kdebase/apps/kwrite/; revision=1128938